--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
   "type": "thelia-module",
   "require": {
     "thelia/installer": "~1.1",
-    "symfony/cache": "^3.1|^4.0",
-    "predis/predis": "^1.1"
+    "symfony/cache": "^3.1|^4.0|~6.1.5",
+    "predis/predis": "~2.0.0"
   },
   "extra": {
     "installer-name": "TheliaCacheRedisAdapter"
